--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Upload Image for Label Detection</title>
+</head>
+<body>
+    <h1>Upload Image for Label Detection</h1>
+    <input type="file" id="image-input" onchange="uploadImage()" />
+    <div id="result"></div>
+    
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.989.0.min.js"></script>
 <script>
     AWS.config.update({
