--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
     <!-- Video Section - Positioned above the title -->
     <video autoplay muted loop>
-        <source src="path-to-your-video.mp4" type="video/mp4">
+        <source src="uivideo.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
