--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Image for Label Detection</title>
+    <title>Image Labels Generator Using AWS Rekognition</title>
     <style>
         /* Video styling */
         video {
             display: block;
             width: 100%;
-            height: 30vh; /* Now takes 30% of the viewport height */
+            height: 50vh; /* Now takes 30% of the viewport height */
             object-fit: cover; /* Ensures the video covers the area */
         }
 
@@ -59,11 +59,16 @@
     </video>
 
     <!-- Main Content -->
-    <h1>Upload Image for Label Detection</h1>
+    <h1>Image Labels Generator Using AWS Rekognition</h1>
 
     <!-- Description text below the title -->
     <div class="description">
-        This is the website for image detection, please upload an image below.
+        This website is hosted on AWS and uses Rekognition to detect and label objects in images. Use images of the following file types:
+        <ul>
+            <li>JPG</li>
+            <li>JPEG</li>
+            <li>PNG</li>
+        </ul>
     </div>
 
     <!-- Separator line -->
