updated index.html 1017

--- a/index.html
+++ b/index.html
@@ -63,12 +63,8 @@
 
     <!-- Description text below the title -->
     <div class="description">
-        This website is hosted on AWS and uses Rekognition to detect and label objects in images. Use images of the following file types:
-        <ul>
-            <li>JPG</li>
-            <li>JPEG</li>
-            <li>PNG</li>
-        </ul>
+        This website is hosted on AWS and uses Rekognition to detect and label objects in images. 
+        Use images of the following file types: JPEG, JPG, PNG
     </div>
 
     <!-- Separator line -->
