--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         video {
             display: block;
             width: 100%;
-            height: 50vh; /* Now takes 30% of the viewport height */
+            height: 75vh; /* Now takes 30% of the viewport height */
             object-fit: cover; /* Ensures the video covers the area */
         }
 
@@ -46,9 +46,15 @@
         }
 
         #result {
-            text-align: center;
+            text-align: center; /* Centers inline elements like text or img */
             margin-top: 20px;
+            display: flex; /* Enable flexbox for centering */
+            justify-content: center; /* Centers content horizontally */
+            align-items: center; /* Centers content vertically (if needed) */
+            flex-direction: column; /* Stack elements vertically (in case you have multiple elements) */
+            height: auto; /* Let the height be flexible depending on the content */
         }
+
     </style>
 </head>
 <body>
@@ -152,17 +158,28 @@
             }, 2000); // Poll every 2 seconds
         }
 
-        // Function to display image with bounding boxes
         function displayImageWithBoundingBoxes(imageUrl, labels) {
             const canvas = document.getElementById('canvas');
             const ctx = canvas.getContext('2d');
 
             const img = new Image();
             img.onload = function () {
+                // Set the canvas width and height based on the image dimensions
                 canvas.width = img.width;
                 canvas.height = img.height;
+
+                // Clear the canvas before drawing the new image
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+                // Draw the image on the canvas
                 ctx.drawImage(img, 0, 0);
 
+                // Set a background color (optional, for visibility with transparent PNG)
+                // For example, light gray background
+                ctx.fillStyle = "#f0f0f0"; // light gray background
+                ctx.fillRect(0, 0, canvas.width, canvas.height); // fill canvas with background color
+                
+                // Draw bounding boxes and labels
                 labels.forEach(label => {
                     label.Instances.forEach(instance => {
                         const bbox = instance.BoundingBox;
@@ -175,19 +192,20 @@
                         ctx.beginPath();
                         ctx.rect(left, top, width, height);
                         ctx.lineWidth = 2;
-                        ctx.strokeStyle = 'red';
+                        ctx.strokeStyle = 'red';  // Color for the bounding box
                         ctx.stroke();
 
-                        // Draw label
+                        // Draw label above the bounding box
                         ctx.font = '12px Arial';
                         ctx.fillStyle = 'red';
                         ctx.fillText(`${label.Name} (${Math.round(label.Confidence)}%)`, left, top - 5);
                     });
                 });
 
-                canvas.style.display = 'block'; // Show the canvas after drawing
+                canvas.style.display = 'block'; // Ensure the canvas is displayed
             };
-            img.src = imageUrl;
+
+            img.src = imageUrl; // Start loading the image
         }
     </script>
 </body>
